# axum-client-ip

./: .editorconfig  .gitignore  .pre-commit.sh  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
examples/: configurable.rs  insecure.rs  maybe-secure.rs  secure.rs  simple.rs  tracing.rs
src/: insecure.rs  lib.rs  rejection.rs  rudimental.rs  secure.rs
