[package]
description = "Client IP address extractors for Axum"
edition = "2021"
license = "MIT"
name = "axum-client-ip"
repository = "https://github.com/imbolc/axum-client-ip"
version = "0.6.0"

[dependencies]
axum = { version = "0.7", default-features = false, features = [
  "http1",
  "tokio",
] }
forwarded-header-value = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
envy = "0.4"
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
