[package]
description = "Client IP address extractors for Axum"
edition = "2021"
license = "MIT"
name = "axum-client-ip"
repository = "https://github.com/imbolc/axum-client-ip"
version = "0.6.0"

[dependencies]
axum = { version = "0.7", default-features = false, features = [
  "http1",
  "tokio",
] }
forwarded-header-value = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
envy = "0.4"
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -2 }
keyword_idents = { level = "deny", priority = -2 }
let_underscore = { level = "deny", priority = -2 }
missing_docs = "deny"
nonstandard_style = { level = "deny", priority = -2 }
refining_impl_trait = { level = "deny", priority = -2 }
rust_2018_compatibility = { level = "deny", priority = -2 }
rust_2018_idioms = { level = "deny", priority = -2 }
rust_2021_compatibility = { level = "deny", priority = -2 }
rust_2024_compatibility = { level = "deny", priority = -2 }
unreachable_pub = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
